pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-node-app-pod
spec:
  containers:
  - name: my-node-app-container
    image: my-node-app-image
    # This will use local image from minikube image list
    imagePullPolicy: Never
    ports:
    - containerPort: 3001
