service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-node-app-service-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: my-node-app
  ports:
    - port: 80
      targetPort: 3001
      nodePort: 30001
