service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-node-app-service-nodeport
spec:
  type: NodePort
  selector:
    app: my-node-app
  ports:
    - port: 80
      targetPort: 3001
      nodePort: 30001
